Fix navigation jump problem and add all google map code (to be added in weebly embed element

--- a/scss/partials/_elements.scss
+++ b/scss/partials/_elements.scss
@@ -4,7 +4,7 @@
 }
 
 ::selection {
-  background: $brand_gray_light;
+  background: $brand_gray_dark;
 }
 
 body {
