--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -22,7 +22,7 @@
   display: flex;
   justify-content: center;
   text-align: left;
-  
+
   background-image: linear-gradient($brand_gray_light, transparent);
   overflow: hidden;
   width: 100%;
@@ -103,7 +103,15 @@
   }
 }
 
+// Necessary to prevent background jump. Pairs with JS in fullscreen-menu.js
+html.scrollbar {
+  overflow-y: scroll;
+}
 body.nav-open {
+  position: fixed;
+  top: 0; right: 0; bottom: 0; left: 0;
+  height: 100%;
+  max-height: 100%;
   .nav-outer-wrap {
     visibility: visible !important;
     opacity: 1 !important;
